fixed:flickering issue for tooltip hover

--- a/src/components/Tooltip/tooltip.scss
+++ b/src/components/Tooltip/tooltip.scss
@@ -6,7 +6,7 @@
 
 .hig__tooltip {
   font-family: $hig-font-family;
-  position: relative;
+  position: absolute;
   display: inline-block;
   list-style: none;
   visibility: visible;
@@ -15,6 +15,7 @@
   text-align: left;
   margin: 0;
   padding: 0;
+  z-index: 1070;
 
   // to override user-agent styling for inputs
   button, select {
@@ -51,7 +52,6 @@
 .hig__tooltip-inner {
   text-align: left;
   border-radius: $tooltip-border-radius;
-  z-index: $flyout-container-layer;
 
   img {
     max-width: 300px;
